<resources>
    <string name="app_name">News App Stage 2</string>
    <string name="error_message">No news at this time.\nTry  restarting the app.</string>
    <string name="thumbnail_descrp">story image</string>
    <string name="author_holder">author name</string>
    <string name="title_holder">GG announces his future plans for club and youth academy which mens</string>
    <string name="section_name_holder">Football</string>
    <string name="date_holder">12.25.2018</string>
    <string name="read_button_text">Read Article</string>
    <string name="no_internet_connection_error">Make sure you\'re connected to the internet and restart the app</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>
    <string name="settings_relevance">relevance</string>
    <string name="settings_newest" translatable="false">newest</string>
    <string name="settings_default" translatable="false">newest</string>
    <string name="preference_key">news order</string>
</resources>
